Update portfolio layout for tablet size and change new project placeholder images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
           <h1
             class="text-[58px] font-[700] leading-[58px] text-[#24262F] mt-[6px]"
           >
-            <span class="text-[#6E06F2]">Front</span>end <br />
+            <span class="text-[#6E06F2]">Front</span>end
+            <br class="block md:hidden" />
             Developer
           </h1>
         </div>
@@ -64,10 +65,10 @@
           >
         </div>
         <div
-          class="w-[280px] h-[280px] border-[1.5px] border-solid border-[#6E06F266] rounded-[50%] mx-auto mt-[85px] mb-[85px]"
+          class="w-[280px] h-[280px] md:w-[400px] md:h-[400px] border-[1.5px] border-solid border-[#6E06F266] rounded-[50%] mx-auto mt-[85px] mb-[85px]"
         >
           <img
-            class="w-[224px] aspect-square object-cover rounded-[50%] m-[28px]"
+            class="w-[224px] md:w-[320px] aspect-square object-cover rounded-[50%] m-[28px] md:m-[40px]"
             src="./src/img/profilePicture.JPG"
             alt="Si Thu Htet profile picture"
           />
@@ -79,10 +80,10 @@
           Projects<span class="text-[#6E06F2]">.</span>
         </h2>
         <div class="projects-container mt-[25px] mx-auto">
-          <div class="w-[350px]" tabindex="0">
+          <div class="w-[350px] md:w-[728px]" tabindex="0">
             <img
               class="w-full h-[275px] object-cover rounded-[20px]"
-              src="./src/img/comingSoonProjectPlaceholder.png"
+              src="./src/img/projectPlaceholderLandscape.jpeg"
               alt="exampleProjectPlaceholder"
             />
             <div class="mt-[30px]">
@@ -104,10 +105,10 @@
               </p>
             </div>
           </div>
-          <div class="w-[350px] mt-[40px]" tabindex="0">
+          <div class="w-[350px] md:w-[728px] mt-[40px]" tabindex="0">
             <img
               class="w-full h-[275px] object-cover rounded-[20px]"
-              src="./src/img/comingSoonProjectPlaceholder.png"
+              src="./src/img/projectPlaceholderLandscape.jpeg"
               alt="exampleProjectPlaceholder"
             />
             <div class="mt-[30px]">
@@ -129,10 +130,10 @@
               </p>
             </div>
           </div>
-          <div class="w-[350px] mt-[40px]" tabindex="0">
+          <div class="w-[350px] md:w-[728px] mt-[40px]" tabindex="0">
             <img
               class="w-full h-[275px] object-cover rounded-[20px]"
-              src="./src/img/comingSoonProjectPlaceholder.png"
+              src="./src/img/projectPlaceholderLandscape.jpeg"
               alt="exampleProjectPlaceholder"
             />
             <div class="mt-[30px]">
@@ -154,10 +155,10 @@
               </p>
             </div>
           </div>
-          <div class="w-[350px] mt-[40px]" tabindex="0">
+          <div class="w-[350px] md:w-[728px] mt-[40px]" tabindex="0">
             <img
               class="w-full h-[275px] object-cover rounded-[20px]"
-              src="./src/img/comingSoonProjectPlaceholder.png"
+              src="./src/img/projectPlaceholderLandscape.jpeg"
               alt="exampleProjectPlaceholder"
             />
             <div class="mt-[30px]">
@@ -407,7 +408,7 @@
         ></a>
       </div>
       <p
-        class="text-[#4E525A] text-[22px] font-[600] leading-[26.4px] mt-[40px]"
+        class="text-center text-[#4E525A] text-[22px] font-[600] leading-[26.4px] mt-[40px]"
       >
         Interested in working together<span class="text-[#6E06F2]">?</span>
       </p>
